--- a/views/login.mustache
+++ b/views/login.mustache
@@ -5,6 +5,13 @@
     <title>Login</title>
   </head>
   <body>
+    <div class="navBar">
+      <ul>
+        <li><a href='/login'>Login</a></li>
+        <li><a href='/create-post'>Create a Post</a></li>
+        <li><a href='/view-posts'>Posts</a></li>
+      </ul>
+    </div>
     <h1>Login</h1>
     <p>Need to register? <a href='/register'>Click here.</a></p>
     <div>
