--- a/views/create-post.mustache
+++ b/views/create-post.mustache
@@ -12,6 +12,12 @@
         <li><a href='/view-posts'>Posts</a></li>
       </ul>
     </div>
+    <h1>Create Post</h1>
+    <form action="/create-post" method = "POST">
+        <input type="text" name = "postTitle" placeholder="Title"/>
+        <input type="text" name= "postBody" placeholder="Body"/>
+        <input type="submit" value="Submit" />
+    </form>
 
   </body>
 </html>
